# SPQR

./: .coveragerc  .flake8  .gitignore  .ucdprod  CHANGELOG.md  README.md  ci_pipeline.csh  jenkinsfile  pyproject.toml  pytest.ini  requirements.txt  sourceme.csh  spqr
app/: README.md  __init__.py  __main__.py  app_config.json  data_structure.py  main.py  user_config.json
app/app_checkers/: get_user_inputs.py  input_checker.py  user_input_checker.py
app/connection_modules/: calibre_python.py  connection.py  shell_commands.py
app/connexion_modules/: connexion.py
app/core_block/: block_dataclass.py
app/export_hitachi/: eps_data.py  hss_creator.py  hss_editor.py  section_maker.py
app/frontend/: main_front.py
app/hss_modules/: .coverage  dataframe_to_eps_data.py  hss_creator.py  hss_creator_draft.py  hss_modificator.py  recette.hss  template_SEM_recipe.json  template_to_all_sections.py
app/interfaces/: calibre_python.py  cli.py  get_user_inputs.py  input_checker.py  logger.py  markdown_to_pdf.py  mask_db.py  recipedirector.py  tracker.py
app/measure/: measure.py  measure.tcl
app/measure_modules/: measure.py  measure.tcl
app/parser_modules/: TAC_ruler_parser.py  XML_parser.py  clipboard_parser.py  csv_parser.py  excel_parser.py  json_parser.py  parse.py  ssfile_parser.py  xml_parser.py
app/parsers/: __init__.py  csv_parser.py  file_parser.py  json_parser.py  parse.py  ssfile_parser.py  tacx_parser.py  xml_parser.py
assets/: app_config.json  hss_template.csv  min_theorical_hss_template.csv  template_SEM_recipe.json
assets/init/: coordinate_file_ex.txt  user_config_ex.json
docs/: api_reference.rst  conf.py  index.rst  release_notes.rst
docs/devops/: deploy_procedure.md  index.rst
docs/user_documentation/: hss_structure.md  index.rst  user_documentation.md
docs/user_guide/: index.rst  user_documentation.md
integration/: test_integration.py
recipe_output/: recette.hss
tests/: conftest.py  output_measure.test  test_measure.py  test_measure_module.py  unit_tests.py
tests/end2end/: test_e2e.py  test_e2e_init_cmd.py
tests/integration/: test_integration.py
tests/output_tests/: recipe.json
tests/test_connection_modules/: test_shell_commands.py
tests/test_end_to_end/: test_e2e.py
tests/test_export_hitachi/: test_eps_data.py  test_hss_creator.py  test_section_maker.py  test_temp_output.hss
tests/test_hss_modules/: test_df_to_eps_data.py  test_hss_creator.py  test_hss_modificator.py  test_temp_output.hss  test_template.json  test_template_to_all_sections.py
tests/test_integration/: test_integration.py
tests/test_interfaces/: test_input_checker.py
tests/test_parser_modules/: test_clipboard_parser.py  test_csv_parser.py  test_excel_parser.py  test_ssfile_parser.py
tests/test_parsers/: test_csv_parser.py  test_file_parser.py  test_json_parser.py  test_parse.py  test_ssfile_parser.py  test_xml_parser.py
tests/test_unit/test_export_hitachi/: test_eps_data.py  test_section_maker.py
tests/test_unit/test_interfaces/: test_input_checker.py
tests/test_unit/test_parsers/: test_file_parser.py  test_parse.py
tests/testfiles/: COMPLETED_TEMPLATE.gds  measure_test_measure_output_recipe_name.csv  short_eps_data_csv.csv  short_eps_data_json.json  ssfile_proto.txt  test_env_genepy.csv  test_env_genepy.json  test_suite.json  test_template.json
tests/tmp/: test_genepy_to_dataframecurrent  test_parse_datacurrent
tests/tmp/test_parse_data0/: tmp_genepy.csv
tests/unit/: test_measure.py
tests/unit/test_export_hitachi/: test_eps_data.py  test_hss_creator.py  test_hss_editor.py
tests/unit/test_interfaces/: test_input_checker.py  test_tracker.py
tests/unit/test_parsers/: test_csv_parser.py  test_json_parser.py  test_parse.py  test_ssfile_parser.py
