[tool.poetry]
name = "spqr"
version = "0.2.0"
description = "SEM Pro: Quick Recipe - A tool for automating the generation of layout-based CD-SEM recipes."
authors = [
    "Romain Bange <romain.bange@st.com>",
    "Romain Chaneliere <romain.chaneliere@st.com>"
]
readme = "README.md"
packages = [
    {include = "app"},
]
include = [
    {path = "assets"},
]

[tool.poetry.scripts]
spqr = "app.__main__:manage_app_launch"

[[tool.poetry.source]]
name = "artifactory"
url = "https://artifactory.st.com/artifactory/api/pypi/remote-pypi-central/simple"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.10"
cx-oracle = "^8.3.0"
lxml = "^4.9.4"
numpy = "^1.26.2"
pandas = "^2.1.4"
pandera = "^0.19.3"
pexpect = "^4.9.0"
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.23"
ipython = "^8.26.0"
sphinx = "^8.0.2"

[tool.poetry.group.dev.dependencies]
coverage = "^7.3.4"
flake8 = "^6.1.0"
ipython = "^8.26.0"
lxml-stubs = "^0.5.1"
mypy = "^1.10.0"
pylint = "^3.0.3"
pytest = "^7.4.3"
pandas-stubs = "^2.2.2.240514"
toml = "^0.10.2"

[tool.poetry.group.temp.dependencies]
pyparsing = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
tmp_path_retention_policy = "failed"
addopts = "--basetemp=tests/tmp"
testpaths = [
    "tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
#    "ignore::DeprecationWarning",
    "ignore::Warning:pyrat*"
]


[tool.coverage.run]
omit = [
    "/sw/*",
    "/work/ratsoft/*",
    "/work/retprod/*",
    "*/tests/*",
    "*/integration/*",
]

[tool.coverage.report]
exclude_lines = [
    "def __repr__"
]
skip_empty = true
ignore_errors = true


[tool.mypy]
ignore_missing_imports = true
packages = "app"
plugins = [
  "pydantic.mypy"
]
