[tool.poetry]
name = "spqr"
version = "0.2.0"
description = "SEM Pro: Quick Recipe - A tool for automating the generation of layout-based CD-SEM recipes."
authors = [
    "Romain Bange <romain.bange@st.com>",
    "Romain Chaneliere <romain.chaneliere@st.com>"
]
readme = "README.md"
packages = [
    {include = "app"},
]
include = [
    {path = "assets"},
]

[tool.poetry.scripts]
spqr = "app.__main__:manage_app_launch"

[[tool.poetry.source]]
name = "artifactory"
url = "https://artifactory.st.com/artifactory/api/pypi/remote-pypi-central/simple"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.10"
cx-oracle = "^8.3.0"
lxml = "^4.9.4"
numpy = "^1.26.2"
pandas = "^2.1.4"
pandera = "^0.20.4"
pexpect = "^4.9.0"
pydantic = "^2.9.2"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.23"

[tool.poetry.group.dev.dependencies]
coverage = "^7.6"
distro = "^1.9.0"
flake8 = "^7.1"
ipython = "^8.26.0"
lxml-stubs = "^0.5.1"
mypy = "^1.12"
pandas-stubs = "^2.1.4"
pylint = "^3.0"
pytest = "^8.3"
toml = "^0.10.2"

[tool.poetry.group.doc.dependencies]
myst-parser = "^4.0.0"
pydata-sphinx-theme = "^0.15.4"
sphinx = "^8.1"

[tool.poetry.group.ext.dependencies]
pyparsing = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
tmp_path_retention_policy = "failed"
addopts = "--basetemp=tests/tmp"
log_level = "info"
testpaths = [
    "tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
#    "ignore::DeprecationWarning",
    "ignore::Warning:pyrat*"
]


[tool.coverage.run]
omit = [
    "/sw/*",
    "/work/ratsoft/*",
    "/work/retprod/*",
    "*/tests/*",
    "*/integration/*",
]

[tool.coverage.report]
exclude_lines = [
    "def __repr__"
]
skip_empty = true
ignore_errors = true

[tool.coverage.html]
directory = "docs/coverage"

[tool.mypy]
ignore_missing_imports = true
packages = "app"
html_report = "docs/mypy"
plugins = [
  "pydantic.mypy"
]
